--- a/index.html
+++ b/index.html
@@ -42,6 +42,19 @@
 			
 		</div>
 
+		<div class="thirdContainer">
+			<div class="wd">whiskey decanter</div>
+			<div class="wg">whiskey glasses</div>
+			<div class="wb">whiskey barrel</div>
+			<div class="ws">whiskey stones</div>
+			<div class="wsh">whiskey shirt</div>
+			<div class="wy">whisky</div>
+			<div class="sc">scotch</div>
+			<div class="wy">whiskey dispenser</div>
+			<div class="bo">bourbon</div>
+			<div class="be">beer</div>
+		</div>
+
 
 		
 	</div>
