--- a/index.html
+++ b/index.html
@@ -55,7 +55,155 @@
 			<div class="be">beer</div>
 		</div>
 
-
+		<div class="fourthContainer">
+			<div class="offers">
+				<fieldset class="special">
+					<p class="sOffers"> <strong>Special offers</strong></p>
+					<input id="onSale" type="checkbox" name="onSale"> 
+					<label id="onSale"> On Sale </label>
+				</fieldset>
+			</div>
+			<div class="categories">
+				<p class="allCat"> All categories </p>
+				<ul class="cates">
+					<li class="hl"> Home & Living </li>
+					<li class="ac">Art & Collectibles</li>
+					<li class="wed">Wedding</li>
+					<li class='clo'>Clothing</li>
+				</ul>
+				<p class="show"> +Show more</p>
+			</div>
+			<div class="shipping">
+				<p class="ship"> Shipping </p>
+					<input id="freeship" type="checkbox" name="freeship"> 
+					<label id="freeship" for="freeship"> Free Shipping </label> </br>
+					<input id="oneDay" type="checkbox" name="oneDay"> 
+					<label id="oneDay" for="oneDay"> Ready to ship in 1 business day  </label></br>
+					<input id="threeDay" type="checkbox" name="threeDay"> 
+					<label id="threeDay" for="threeDay">Ready to ship within 3 business days </label>
+			</div>
+			<div class="material">
+				<p class="materialType"> Material </p>
+					<input id="ceramic" type="checkbox" name="ceramic"> 
+					<label id="ceramic" for="ceramic"> Ceramic</label> </br>
+					<input id="cork" type="checkbox" name="cork"> 
+					<label id="cork" for='cork'> Cork  </label></br>
+					<input id="fabric" type="checkbox" name="fabric"> 
+					<label id="fabric" for="fabric">Fabric</label></br>
+					<input id="glass" type="checkbox" name="glass"> 
+					<label id="glass" for="glass">Glass</label></br>
+					<input id="metal" type="checkbox" name="metal"> 
+					<label id="metal" for="metal">Medal</label></br>
+				<p class="show"> +Show more</p>
+			</div>
+			<div class="color">
+				<p class="clr"> Color </p>
+					<input id="beige" type="checkbox" name="beige"> 
+					<label id="beige" for="beige"> Beige</label> </br>
+					<input id="black" type="checkbox" name="black"> 
+					<label id="black" for="black"> Black  </label></br>
+					<input id="blue" type="checkbox" name="blue"> 
+					<label id="blue" for="blue">Blue</label></br>
+					<input id="bronze" type="checkbox" name="bronze"> 
+					<label id="bronze" for="bronze">Bronze</label></br>
+					<input id="brown" type="checkbox" name="brown"> 
+					<label id="brown" for="brown">Brown</label></br>
+				<p class="show"> +Show more</p>
+			</div>
+			<div class="personal">
+				<p class="prl"> Can be personalized </p>
+					<input id="yes" type="checkbox" name="yes"> 
+					<label id="yes" for="yes"> Yes</label> </br>
+					<input id="no" type="checkbox" name="no"> 
+					<label id="no" for="no"> No  </label></br>
+			</div>
+			<div class="occasion">
+				<p class="occ"> Occasion </p>
+					<input id="anniversary" type="checkbox" name="anniversary"> 
+					<label id="anniversary" for="anniversary"> Anniversary</label> </br>
+					<input id="baby" type="checkbox" name="baby"> 
+					<label id="baby" for="baby"> Baby shower  </label></br>
+					<input id="bach" type="checkbox" name="bach"> 
+					<label id="bach" for="bach">Bachelor party</label></br>
+					<input id="party" type="checkbox" name="party"> 
+					<label id="party" for="party">Bachelorette party</label></br>
+					<input id="bday" type="checkbox" name="bday"> 
+					<label id="bday" for="bday">Birthday</label></br>
+				<p class="show"> +Show more</p>				
+			</div>
+			<div class="holiday">
+				<p class="hld"> Holiday </p>
+					<input id="xmas" type="checkbox" name="xmas"> 
+					<label id="xmas" for="xmas"> Christmas</label> </br>
+					<input id="cinco" type="checkbox" name="cinco"> 
+					<label id="cinco" for="cinco"> Cinco de Mayo </label></br>
+					<input id="easter" type="checkbox" name="easter"> 
+					<label id="easter" for="easter">Easter</label></br>
+					<input id="dad" type="checkbox" name="dad"> 
+					<label id="dad" for="dad">Father's Day</label></br>
+					<input id="hal" type="checkbox" name="hal"> 
+					<label id="hal" for="hal">Halloween</label></br>
+				<p class="show"> +Show more</p>					
+			</div>
+			<div class="location">
+				<p class="loc"> Location </p>
+					<input id="any" type="radio" name="any"> 
+					<label id="any" for="any"> Anywhere </label></br>
+					<input id="us" type="radio" name="us"> 
+					<label id="us" for="us"> United States</label> </br>
+					<input id="custom" type="radio" name="custom"> 
+					<label id="custom" for="custom">Custom</label></br>
+					<div class="locbar">
+					<input class="zip" name="zip" type="text" placeholder="Enter location">
+					<button class="zipButton" type="submit"><i class="fas fa-caret-right"></i></button>
+					</div>
+			</div>
+			<div class="item">
+				<p class="type"> Item type </p>
+					<input id="all" type="radio" name="all"> 
+					<label id="all" for="all"> All </label></br>
+					<input id="hand" type="radio" name="hand"> 
+					<label id="hand" for="hand"> Handmade</label> </br>
+					<input id="vintage" type="radio" name="vintage"> 
+					<label id="vintage" for="vintage">Vintage</label></br>
+			</div>
+			<div class="price">
+				<p class="mula"> Price ($) </p>
+					<input id="anyprice" type="radio" name="anyprice"> 
+					<label id="anyprice" for="anyprice"> Any Price </label></br>
+					<input id="under" type="radio" name="under"> 
+					<label id="under" for="under"> Under $25</label> </br>
+					<input id="fifty" type="radio" name="fifty"> 
+					<label id="fifty" for="fifty">$25 to $50</label></br>
+					<input id="hunnid" type="radio" name="hunnid"> 
+					<label id="hunnid" for="hunnid">$50 to $100</label></br>
+					<input id="over" type="radio" name="over"> 
+					<label id="over" for="over">Over $100</label></br>
+					<input id="cosprice" type="radio" name="cosprice"> 
+					<label id="cosprice" for="cosprice">Custom</label></br>
+					<div class="ltoh">
+					<input class="low" name="low" type="text" placeholder="Low"> 
+					<p class="to"> to </p> 
+					<input class="high" name="high" type="text" placeholder="high">
+					<button class="monButton" type="submit"><i class="fas fa-caret-right"></i></button>
+					</div>
+			</div>
+			<div class="ordering">
+				<p class="options">Ordering options</p>
+					<input id="ecard" type="checkbox" name="ecard"> 
+					<label id="ecard" for="ecard"> Accepts Etsy gift cards</label> </br>
+					<input id="giftw" type="checkbox" name="giftw"> 
+					<label id="giftw" for="giftw">Can be gift-wrapped</label></br>
+			</div>
+			<div>
+				<p>Ship to</p>
+				<select class="country">
+					<option>United States</option>
+					<option>Canada</option>
+					<option>Mexico</option>
+				</select>
+			</div>
+		</div>
 		
 	</div>
 	
