--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<div class="bo">bourbon</div>
 			<div class="be">beer</div>
 		</div>
-
+		<div class="bodyCon">
 		<div class="fourthContainer">
 			<div class="offers">
 				<fieldset class="special">
@@ -204,15 +204,13 @@
 				</select>
 			</div>
 		</div>
+		<div class="jsContainer">
+			
+		</div>
+	</div>
 		
 	</div>
 	
-
-
-
-
-
-
 
 
 
