--- a/index.html
+++ b/index.html
@@ -205,15 +205,64 @@
 			</div>
 		</div>
 		<div class="jsContainer">
-			
+		</div>
+		</div>
+
+	<div class="sixthContainer">
+			<div class="subCon">
+				<p class="footer"> Get fresh Etsy trends and unique gift ideas delivered right to your inbox.</p>
+				<input class="topInput" name="search" type="text" placeholder="Enter your email">
+				<button class="subButton" type="submit">Subscibe</button>
+			</div>
+
+	<div class="bFooter">
+		<div class="shopBottom"><strong>Shop</strong>
+			<ul class="shopUl">
+				<li class="footerLi">Gift cards</li>
+				<li class="footerLi">Etsy blog</li>
+			</ul>
+		</div>
+		<div class="sellBottom"><strong>Sell</strong>
+			<ul class="sellUl">
+				<li class="footerLi">Sell on Etsy</li>
+				<li class="footerLi">Teams</li>
+				<li class="footerLi">Forums</li>
+			</ul>
+		</div>
+		<div class="aboutBottom"><strong>About</strong>
+			<ul class="aboutUl">
+				<li class="footerLi">Etsy, Inc.</li>
+				<li class="footerLi">Policies</li>
+				<li class="footerLi">Investors</li>
+				<li class="footerLi">Careers</li>
+				<li class="footerLi">Press</li>
+			</ul>
+		</div>
+		<div class="followBottom"> <strong>Follow Etsy</strong>
+			<ul class="followUl">
+				<li class="footerLi"><i class="fab fa-facebook-square"></i>Facebook</li>
+				<liclass="footerLi"><i class="fab fa-instagram"></i>Instagram</li>
+				<li class="footerLi"><i class="fab fa-pinterest"></i>Pinterest</li>
+				<li class="footerLi"><i class="fab fa-twitter"></i>Twitter</li>
+			</ul>
 		</div>
 	</div>
-		
 	</div>
+	<div class="lastCon">
+			<div class="leftEtsy">
+				<p class="name">Etsy</p>
+				<p class="easy"> We make it easy to find your thing. </p>
+			</div>	
+			<div class="usCon">
+				<p class="us"> <i class="fas fa-flag-usa"></i>United States </p>
+				<p class="english"> English</p>
+				<p class="usd"> $ (USD) </p>
+			</div>	
+	</div>
+			
 	
 
-
-
+	</div>
 <script src="items.js"> </script>	
 <script src="main.js"></script>
 </body>
